// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a update message w/ dev tag 1`] = `
┌─────────────────────────────────────────────────────────┐
│  Update available 2.6.1 -> 2.16.0                       │
│  Run the following to update                            │
│    npm i --save-dev prisma@dev                          │
│    npm i @prisma/client@dev                             │
└─────────────────────────────────────────────────────────┘
`;

exports[`should display a update message w/o tag 1`] = `
┌─────────────────────────────────────────────────────────┐
│  Update available 2.6.1 -> 2.16.0                       │
│  Run the following to update                            │
│    npm i --save-dev prisma                              │
│    npm i @prisma/client                                 │
└─────────────────────────────────────────────────────────┘
`;
